Integrate native macOS and Windows installers